Astro working - to be optimized into multiple islands

--- a/islands-astro/src/pages/products.astro
+++ b/islands-astro/src/pages/products.astro
@@ -5,8 +5,7 @@ import ProductsPageIsland from "../islands/ProductsPageIsland";
 import Footer from "../components/Footer.astro";
 ---
 
-<Layout title="Products - ShopBench">
-  <!-- Added currentPath prop to AppIsland for products page -->
+<Layout title="ShopBench - E-commerce Benchmark">
   <AppIsland client:load currentPath="/products" />
   <ProductsPageIsland client:load />
   <Footer />
