--- a/islands-astro/src/pages/index.astro
+++ b/islands-astro/src/pages/index.astro
@@ -106,6 +106,8 @@ const categories = [
             <img
               src="https://images.unsplash.com/photo-1560472354-b33ff0c44a43?w=500&h=500&fit=crop&crop=center"
               alt="Featured Products"
+              width="500"
+              height="500"
               class="w-full h-auto rounded-2xl shadow-2xl"
             />
           </div>
