Minor cosmetic changes

--- a/islands-astro/src/pages/products.astro
+++ b/islands-astro/src/pages/products.astro
@@ -4,9 +4,8 @@ import { NavBar } from "../islands/Navbar";
 import ProductsApp from "../islands/ProductsApp.tsx";
 ---
 
-<Layout title="ShopBench - Our Products">
+<Layout>
   <NavBar client:load currentPath="/products" />
-
   <div class="min-h-screen bg-background">
     <header class="bg-gradient-to-r from-blue-50 to-purple-50 border-b">
       <div class="container mx-auto px-4 py-8">
