--- a/islands-astro/src/pages/index.astro
+++ b/islands-astro/src/pages/index.astro
@@ -106,7 +106,7 @@ const categories = [
                 </Button>
               </a>
 
-              <a href="/learn-more" class="inline-flex">
+              <span class="inline-flex">
                 <Button
                   variant="outline"
                   size="lg"
@@ -114,7 +114,7 @@ const categories = [
                 >
                   Learn More
                 </Button>
-              </a>
+              </span>
             </div>
 
             <div class="flex items-center gap-6 pt-4">
